plugins {
    id("java")
    id("application")
    id("com.diffplug.spotless") version "7.0.4"
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

// give your project a name
archivesBaseName = "Peek-A-Boo"
version = "v0.0.1"
mainClassName = "com.litiengine.peekaboo.Program"


dependencies {
    implementation 'net.java.jinput:jinput:2.0.10'
    implementation 'de.gurkenlabs:litiengine'
}

tasks.withType(Copy).all {
    duplicatesStrategy 'exclude'
}

sourceSets {
    main.java.srcDir "src"
    main.resources.srcDirs = ["sprites", "audio", "maps", "misc"]

    // main.resources.includes = ["game.litidata"]
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["--enable-preview"]
}

tasks.withType(Test).configureEach {
    jvmArgs += ["--enable-preview"]
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ["--enable-preview"]
}

